# ps-libmctp-win

./: BUILD_WINDOWS.md  CMakeLists.txt  README.md  build.bat
include/: compiler.h  libmctp-cmds.h  libmctp-log.h  libmctp-mmbi.h  libmctp.h  mctp_transport.h
src/: alloc.c  core.c  log.c  mmbi.c  transport.c
tests/: bmc_transport.c  host_transport.c  test-utils.c  test_bridge.c  test_cmds.c  test_core.c  test_file_transfer.c  test_mmbi.c  test_mmbi_bmc.c  test_mmbi_full_duplex.c  test_mmbi_host.c  test_mmbi_log.c  test_stress_mmbi.c
windows_driver/: MmbiDriver.c  MmbiDriver.h  MmbiDriver.inf
